--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,11 @@ a {
   font-size: 1.5rem;
   font-weight: 600;
 }
+.greenText{
+  color: #007200;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
 .button{
   font-weight: 500;
   padding: 0.6rem 1.4rem;
